fix: adjust font sizes and letter spacing in style.css for improved readability

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ html {
     animation-delay: 3s;
     animation-fill-mode: forwards;
     color: #8135b1;
+    letter-spacing: -3px;
 }
 
 /* Responsive font sizes for each section */
@@ -128,7 +129,7 @@ html {
     bottom: 0;
     right: 0;
     line-height: 1;
-    font-size: clamp(1.8rem, 6vw, 8rem);
+    font-size: clamp(1.9rem, 7vw, 4.1rem);
     color: #FFEDBC;
     opacity: 0;
     animation: fadeIn 1s ease-in-out;
@@ -139,7 +140,7 @@ html {
     position: absolute;
     top: 0;
     right: 0;
-    font-size: clamp(1.8rem, 6vw, 8rem);
+    font-size: clamp(1.9rem, 7vw, 4.1rem);
     line-height: 1;
     color: #FFEDBC;
     opacity: 0;
@@ -151,7 +152,7 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    font-size: clamp(1.8rem, 6vw, 8rem);
+    font-size: clamp(1.9rem, 7vw, 4.1rem);
     line-height: 1;
     text-align: left;
     color: #8135b1;
@@ -173,19 +174,19 @@ html {
 }
 
 .mus .by {
-    font-size: clamp(1rem, 3.4vw, 5rem);
+    font-size: clamp(1rem, 3.4vw, 2.5rem);
     line-height: 1;
     text-align: left;
     align-content: end;
 }
 
 .mus .byArt .art {
-    font-size: clamp(1.4rem, 4.5vw, 6rem);
+    font-size: clamp(1.5rem, 5.4vw, 3.1rem);
 }
 
 .eum .safari {
     line-height: 1;
-    font-size: clamp(1.4rem, 4.5vw, 6rem);
+    font-size: clamp(1.5rem, 5.4vw, 3.1rem);
     letter-spacing: -1px;
     opacity: 0;
     animation: fadeIn 1s ease-in-out;
